[gd_scene load_steps=2 format=3 uid="uid://dmebcdbpb5fg1"]

[ext_resource type="Script" uid="uid://dd5bfxluxdcof" path="res://UI/shaky_text.gd" id="1_a7muy"]

[node name="ShakyText" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a7muy")
text_display = 2
FlyTextIn = true

[node name="Label" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -81.0
offset_top = -30.0
offset_right = 81.0
offset_bottom = 62.0
text = "UNDEFINED"
scroll_active = false
autowrap_mode = 2
horizontal_alignment = 1

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
